src/style.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 600;
  color: #595F33;
  text-decoration: inherit;
}
a:hover {
  /*color: #E4CB2D;*/
  color: #93ABC7;
}

body {
  margin: 0;
  font-family: "Karla", Georgia, 'Times New Roman', Times, serif;
  font-size: 1rem;
  color: #595F33;
  background-color: #F8F8F8;
}

h1 {
  font-family: "Kalnia", 'Times New Roman', Times, serif;
  margin: 0;
  text-align: center;
  font-size: clamp(2rem, 10vw, 6rem);
}

h2 {
  font-family: "Kalnia", 'Times New Roman', Times, serif;
  font-size: 2rem;
  line-height: 2rem;
  margin: 0;
  padding: 0.5rem 0 1rem 0;
}

h3 {
  font-family: "Karla", Georgia, 'Times New Roman', Times, serif;
  font-size: 1.5rem;
  line-height: 1.5rem;
  margin: 0;
}

header {
  width: 100%;
}

.icons {
  display: flex;
  gap: 1rem;
  justify-content: flex-end;
  margin: 0 1rem 0.5rem 0;
}

.fa, .fa-solid {
  font-size: 2.5rem;
}

.icons > a {
  padding: 0.1rem 0.5rem;
  opacity: 70%;
}

main {
  width: 100vw;
  margin: auto;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

section {
  background-color: #FFF4E5;
  border: solid 0.2rem #595F33;
  border-radius: 1rem;
  padding: 1rem;
  width: 90vw;
}

.intro {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.hello {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.hello > div > ul {
  margin: 0.5rem;
}

.profile {
  margin: auto;
}

.profile-photo {
  max-height: 30vh;
  width: auto;
  border-radius: 100%;
}

.flex {
  display: flex;
}

.toolkit, .flex {
  flex-flow: row wrap;
}

.toolkit > h3, .toolkit > div > h3 {
  font-size: 1rem;
}

.toolkit > div > h3 {
  margin-top: 1rem;
}

.toolkit > div {
  flex: 1;
  min-width: 45%;
}

.projects {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(4);
  gap: 2rem;
}

.card {
  max-width: 90vw;
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.card img {
  max-width: 100%;
  height: auto;
}

.project-link {
  width: 80%;
}

.project-description {
  max-width: 100%;
  height: auto;
}

.tags {
  display: flex;
  justify-content: space-around;
  gap: 0.5rem;
}

.tags span {
  background-color: #595F33;
  color: #F8F8F8;
  padding: 0 0.5rem;
}

.other-projects {
  gap: 2rem;
}

.mini-card h3 {
  font-size: 1.2rem;
  line-height: 1.2rem;
}

.mini-card .tags {
  justify-content: flex-start;
}

footer {
  background-color: #595F33;
  color: #F8F8F8;
  min-height: 10vh;
  padding: 1rem;
  margin-top: 1rem;
}

footer h3 {
  text-align: center;
  padding-bottom: 1rem;
}

footer a {
  color: #F8F8F8;
}

.contact {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}

button:hover {
  border-color: #646cff;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

/* -------- TABLET -------- */
@media (min-width: 430px){

  main {
    width: 95vw;
  }

  .hello {
    flex-direction: row;
  }

  .contact {
    flex-direction: row;
  }

}

/* -------- SMALL DESKTOP -------- */
@media (min-width: 740px){
  .intro {
    flex-direction: row;
    align-items: stretch;
  }

  .hello {
    flex-direction: column;
  }
}

/* -------- DESKTOP -------- */
@media (min-width: 1024px){

  .hello {
    flex-direction: row;
  }

  .toolkit {
    max-width: 50vw;
  }

  .projects {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
  }

  .card {
    max-width: 45vw;
    height: auto;
  }

  .card img {
    max-height: 40vh;
    width: auto;
  }
}

/* -------- ANIMATION -------- */
@media (prefers-reduced-motion: no-preference) {

  .project-link {
    will-change: filter;
    transition: filter 300ms ease-in-out;
  }
  
  .project-link:hover {
    filter: drop-shadow(0.5rem 0.5rem #595F33);
  }

  .icons > a {
    will-change: opacity;
    transition: opacity 300ms ease-in-out;
  }
  .icons > a:hover {
    opacity: 100%;
    color: #595F33;
  }
  /*
  a, i {
    will-change: filter;
    transition: filter 300ms ease-in-out;
  }
  a:hover, i:hover {
    filter: drop-shadow(0.1rem 0.1rem #595F33);
  }
  */
}

